# library-management-system

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 918b104abecc_initial_migration.py  a4b3ea4d452b_add_book_model.py
app/: database.py  instrumentation.py  main.py  utils.py
app/crud/: __init__.py  author.py  book.py  user.py
app/models/: author.py  book.py  user.py
app/routers/: author.py  book.py  user.py
app/schemas/: __init__.py  author.py  book.py  user.py
app/services/: author.py  book.py  user.py
tests/test_crud/: test_author.py  test_book.py  test_user.py
tests/test_integration/: test_author_endtoend.py  test_book_endtoend.py  test_full_integration.py  test_setup.py  test_user_endtoend.py
tests/test_routers/: test_author.py  test_book.py  test_user.py
tests/test_services/: test_author.py  test_book.py  test_user.py
